[package]
name = "svd-expander"
description = "Expands arrays and resolves inheritance chains in CMSIS-SVD specifications"
version = "0.1.0"
authors = ["Ross Tollefson <ross@past9systems.com>"]
edition = "2018"
keywords = ["CMSIS", "SVD", "parser", "inheritance", "expander"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Past9/svd-expander"

[dependencies]
svd-parser = "0.9.0"
anyhow = "1.0.28"
xmltree = "0.8" 
